--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-google_api_key = 9a5e4732-3907-4f5f-8540-d38586078837
+google_api_key = 
 
 transit_url = http://developer.itsmarta.com/BRDRestService/RestBusRealTimeService/GetAllBus
 
